<resources>
    <string name="app_name">HarmonyHost</string>
    <string name="err_name">Enter a valid name more than 3 char less than 30</string>
    <string name="err_email">Enter a valid email</string>
    <string name="err_pass">Capital and small letter symbol number</string>
    <string name="err_dob">Incorrect date of birth</string>
    <string name="err_con_pass">Capital and small letter symbol number</string>
    <string name="pause">Pause music</string>
    <string name="resume">Resume Background Music</string>
    <string name="Current_playlist">\"Current Playlist: \"</string>
    <string name="song_playing">Song playing</string>
    <string name="previous_song">Previous Song</string>
    <string name="next_song">Next Song</string>
    <string name="play">Play</string>
    <string name="Resume">Resume</string>
    <string name="Pause">Pause</string>
    <string name="vote">Votes</string>
    <string name="song_1">Song 1</string>
    <string name="song_2">Song 2</string>
    <string name="song_3">Song 3</string>
    <string name="song_4">Song 4</string>
    <string name="song_5">Song 5</string>
    <string name="song_6">Song 6</string>
    <string name="song_7">Song 7</string>
    <string name="song_8">Song 8</string>
    <string name="likes">Likes</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_session">Create Session</string>
    <string name="account_settings">Account Settings</string>
    <string name="back_to_main">Back to Main</string>
</resources>