<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/plainbackground_harmony">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="45dp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/harmony_host_logo"/>

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:hint="@string/name"
            android:ems="10"
            android:padding="5dp"
            android:background="@color/white"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:padding="5dp"
            android:background="@color/white"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:padding="5dp"
            android:background="@color/white"
            android:textSize="30sp" />


        <Button
            android:id="@+id/button_login"
            android:layout_width="120dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textSize="25sp">

        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/don_t_have_an_account"
            android:textStyle="bold"
            android:layout_marginRight="5dp">

        </TextView>
        <TextView
            android:id="@+id/textView_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp">

        </TextView>
    </LinearLayout>

</LinearLayout>