<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/plainbackground_harmony">

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginLeft="20dp"-->
    <!--        android:layout_marginRight="20dp"-->
    <!--        android:layout_marginTop="80dp"-->
    <!--        android:gravity="center">-->

    <!--        <TextView-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="@string/app_name"-->
    <!--            android:textColor="@color/white"-->
    <!--            android:textSize="50dp"-->
    <!--            android:textStyle="bold">-->

    <!--        </TextView>-->
    <!--    </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="45dp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/harmony_host_logo"/>

        <EditText
            android:id="@+id/editText_username"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:hint="@string/name"
            android:textSize="30sp"
            android:background="@color/white"
            android:padding="5dp" />

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:inputType="textEmailAddress"
            android:layout_gravity="center"
            android:hint="@string/email"
            android:textSize="30sp"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            android:padding="5dp" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="300dp"
            android:inputType="textPassword"
            android:padding="5dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:hint="@string/password"
            android:textSize="30sp"/>


        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:text="@string/register"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/already_have_an_account"
            android:textStyle="bold"
            android:layout_marginRight="5dp">

        </TextView>

        <TextView
            android:id="@+id/textView_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white">
        </TextView>
    </LinearLayout>

</LinearLayout>